--- a/index.html
+++ b/index.html
@@ -78,6 +78,21 @@
             I'm a student currently studying BSc.CSIT at St.Lawrence College
           </p>
           <div class="info-1">
+            <h3>A Bit About Me</h3>
+            <p class="p1">
+              At the moment, I'm pursuing my studies in Computer Science and
+              find myself in the midst of my third semester. As part of my
+              academic growth, I'm actively engaged in learning a variety of
+              programming languages, including HTML, CSS, Java, and JavaScript.
+            </p>
+            <p class="p2">
+              To reinforce my understanding and skills, I've taken it upon
+              myself to work on personal projects, one of which is this very
+              portfolio you see before you. Through hands-on experience, I aim
+              to deepen my knowledge and practical abilities in these areas.
+            </p>
+          </div>
+          <!-- <div class="info-2">
             <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
@@ -85,16 +100,7 @@
               repellat exercitationem, atque amet non debitis minima blanditiis
               voluptate quod hic voluptates nemo ipsum.
             </p>
-          </div>
-          <div class="info-2">
-            <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-              porro adipisci eaque molestiae cupiditate ducimus veritatis
-              repellat exercitationem, atque amet non debitis minima blanditiis
-              voluptate quod hic voluptates nemo ipsum.
-            </p>
-          </div>
+          </div> -->
         </div>
       </div>
       <!--Footer Strat-->
