--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           <ul class="nav-links">
             <!-- <li><a class="nav-link" href="index.html">Home</a></li> -->
             <li><a class="nav-link" href="restricted.html">About</a></li>
-            <li><a class="nav-link" href="Vclone/index.html">Projects</a></li>
+            <li><a class="nav-link-dropdown" href="Vclone/index.html">Projects</a></li>
+            <!-- <div class="dropdown-content">
+              <a href="">Viber Clone</a>
+              <a href="">Calculator</a>
+            </div> -->
             <li><a class="nav-link" href="restricted.html">Services</a></li>
             <!-- <li><a class="nav-link" href="restricted.html">Contact Me</a></li> -->
           </ul>
@@ -92,15 +96,6 @@
               to deepen my knowledge and practical abilities in these areas.
             </p>
           </div>
-          <!-- <div class="info-2">
-            <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-              porro adipisci eaque molestiae cupiditate ducimus veritatis
-              repellat exercitationem, atque amet non debitis minima blanditiis
-              voluptate quod hic voluptates nemo ipsum.
-            </p>
-          </div> -->
         </div>
       </div>
       <!--Footer Strat-->
