--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         <div class="nav-container">
           <ul class="nav-links">
             <!-- <li><a class="nav-link" href="index.html">Home</a></li> -->
-            <li><a class="nav-link" href="restricted.html">About</a></li>
-            <li><a class="nav-link-dropdown" href="Vclone/index.html">Projects</a></li>
+            <li><a class="nav-link" href="#socials">About</a></li>
+            <li>
+              <a class="nav-link-dropdown" href="Vclone/index.html">Projects</a>
+            </li>
             <!-- <div class="dropdown-content">
               <a href="">Viber Clone</a>
               <a href="">Calculator</a>
@@ -98,9 +100,12 @@
           </div>
         </div>
       </div>
-      <!--Footer Strat-->
+    </div>
 
-      <div class="socials">
+    <!--Footer Strat-->
+
+    <footer class="hero-content">
+      <div id="socials">
         <div>
           <a href="restricted.html"><i class="fa-solid fa-envelope"></i></a>
         </div>
@@ -125,6 +130,6 @@
         <h1>S</h1>
         <p>Last Updated on Febuary 17</p>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
