--- a/test.html
+++ b/test.html
@@ -65,13 +65,26 @@
   <body>
     <!-- <h1>S</h1> -->
 
-    <div class="dropdown">
-      <button class="dropbtn">Dropdown</button>
-      <div class="drop-content">
-        <a href="">Link</a>
-        <a href="">Link</a>
-        <a href="">Link</a>
-      </div>
-    </div>
+    <ul>
+      <li><a href="#section1">Section 1</a></li>
+      <li><a href="#section2">Section 2</a></li>
+      <li><a href="#section3">Section 3</a></li>
+  </ul>
+
+
+  <main style="margin-top: 1000px;">
+    <section id="section1">
+        <h2>Section 1</h2>
+        <p>This is the content of section 1.</p>
+    </section>
+    <section id="section2">
+        <h2>Section 2</h2>
+        <p>This is the content of section 2.</p>
+    </section>
+    <section id="section3">
+        <h2>Section 3</h2>
+        <p>This is the content of section 3.</p>
+    </section>
+</main>
   </body>
 </html>
