--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <p>
             I'm a student currently studying BSc.CSIT at St.Lawrence College
           </p>
-          <div class="info-1">
+          <!-- <div class="info-1">
             <h3>A Bit About Me</h3>
             <p class="p1">
               At the moment, I'm pursuing my studies in Computer Science and
@@ -97,7 +97,7 @@
               portfolio you see before you. Through hands-on experience, I aim
               to deepen my knowledge and practical abilities in these areas.
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
       </div>
       <div class="ending">
         <h1>S</h1>
-        <p>Last Updated on Febuary 17</p>
+        <p>Last Updated on August 27</p>
       </div>
     </footer>
   </body>
