--- a/index.html
+++ b/index.html
@@ -57,17 +57,9 @@
       <nav class="main-navbar">
         <div class="nav-container">
           <ul class="nav-links">
-            <!-- <li><a class="nav-link" href="index.html">Home</a></li> -->
             <li><a class="nav-link" href="#socials">About</a></li>
-            <li>
-              <a class="nav-link-dropdown" href="Vclone/index.html">Projects</a>
-            </li>
-            <!-- <div class="dropdown-content">
-              <a href="">Viber Clone</a>
-              <a href="">Calculator</a>
-            </div> -->
+            <li><a class="nav-link" href="Vclone/index.html">Projects</a></li>
             <li><a class="nav-link" href="restricted.html">Services</a></li>
-            <!-- <li><a class="nav-link" href="restricted.html">Contact Me</a></li> -->
           </ul>
         </div>
       </nav>
@@ -77,27 +69,10 @@
       <div class="main-body">
         <div class="profile">
           <img class="henci" src="images/henci 2.jpg" alt="my-photo" />
-        </div>
-        <div class="body-container">
           <h1>Hey, I'm Suyog.</h1>
           <p>
-            I'm a student currently studying BSc.CSIT at St.Lawrence College
+            I'm a student currently studying BSc.CSIT at <br> St.Lawrence College
           </p>
-          <!-- <div class="info-1">
-            <h3>A Bit About Me</h3>
-            <p class="p1">
-              At the moment, I'm pursuing my studies in Computer Science and
-              find myself in the midst of my third semester. As part of my
-              academic growth, I'm actively engaged in learning a variety of
-              programming languages, including HTML, CSS, Java, and JavaScript.
-            </p>
-            <p class="p2">
-              To reinforce my understanding and skills, I've taken it upon
-              myself to work on personal projects, one of which is this very
-              portfolio you see before you. Through hands-on experience, I aim
-              to deepen my knowledge and practical abilities in these areas.
-            </p>
-          </div> -->
         </div>
       </div>
     </div>
@@ -115,7 +90,7 @@
           ></a>
         </div>
         <div>
-          <a href="restricted.html"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/suyog-magar-901477265" target="_blank" ><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div>
           <a href="https://www.facebook.com/suyog.magar.796/" target="_blank"
@@ -128,7 +103,7 @@
       </div>
       <div class="ending">
         <h1>S</h1>
-        <p>Last Updated on August 27</p>
+        <p>Last Updated on August 25</p>
       </div>
     </footer>
   </body>
