--- a/index.html
+++ b/index.html
@@ -3,107 +3,167 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Suyog</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Protest+Revolution&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="images/tab-icon.png" />
+    <title>Document</title>
+
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="small.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <!--
+      Font Awesome
+    -->
+
     <link
       rel="stylesheet"
       data-purpose="Layout StyleSheet"
       title="Web Awesome"
-      href="/css/app-wa-462d1fe84b879d730fe2180b0e0354e0.css?vsn=d"
+      href="/css/app-wa-69936a1b279f3a9001400679f162b44b.css?vsn=d"
     />
 
     <link
       rel="stylesheet"
-      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/all.css"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css"
     />
 
     <link
       rel="stylesheet"
-      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-thin.css"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-thin.css"
     />
 
     <link
       rel="stylesheet"
-      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-solid.css"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-solid.css"
     />
 
     <link
       rel="stylesheet"
-      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-regular.css"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-regular.css"
     />
 
     <link
       rel="stylesheet"
-      href="https://site-assets.fontawesome.com/releases/v6.5.1/css/sharp-light.css"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-light.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-thin.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-solid.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-regular.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-light.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-thin.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-regular.css"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-light.css"
     />
   </head>
   <body>
-    <!--Header Start-->
+    <div id="nav-body-container">
+      <!-- <div class="bgimg">
+      <img src="./images/bg2.jpg" alt="bgimg" />
+    </div> -->
 
-    <div class="all-container">
-      <nav class="main-navbar">
-        <div class="nav-container">
-          <ul class="nav-links">
-            <li><a class="nav-link" href="#socials">About</a></li>
-            <li><a class="nav-link" href="Vclone/index.html">Projects</a></li>
-            <li><a class="nav-link" href="restricted.html">Services</a></li>
-          </ul>
+      <nav class="navcontainer">
+        <a class="navlogo" href="index.html">
+          <img src="./images/logo.png" alt="logo" />
+        </a>
+        <ul class="navlink">
+          <li><a class="navlinks" href="index.html">Home</a></li>
+          <li><a class="navlinks" href="#">About</a></li>
+          <li><a class="navlinks" href="#">Contact</a></li>
+          <li><a class="navlinks" href="#">Bio</a></li>
+          <li>
+            <a class="nav_icon" href="#">☰</a>
+          </li>
+        </ul>
+        <div class="btn">
+          <a class="cv-btn" href="#">DOWNLOAD CV</a>
         </div>
       </nav>
-
-      <!--Body start-->
-
-      <div class="main-body">
-        <div class="profile">
-          <img class="henci" src="images/henci 2.jpg" alt="my-photo" />
-          <h1>Hey, I'm Suyog.</h1>
-          <p>
-            I'm a student currently studying BSc.CSIT at <br> St.Lawrence College
+      <div class="mainbody">
+        <div class="main-txt">
+          <p id="a1">Hello I'm,</p>
+          <p id="a2">Suyog Rana Magar</p>
+          <p id="a3">
+            A student currently studying <b style="font-size: 26px">BSC.Csit</b>
           </p>
+          <div class="btn">
+            <a class="cv-btn" href="#">SAY HELLO</a>
+          </div>
+        </div>
+
+        <div class="body-img">
+          <img src="./images/bnw.jpg" loading="lazy" alt="body-img" />
         </div>
       </div>
     </div>
 
-    <!--Footer Strat-->
+    <footer>
+      <div class="socials">
+        <ul class="icons">
+          <li class="links">
+            <a href="" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
+          </li>
+          <li class="links">
+            <a href="" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li class="links">
+            <a href="" target="_blank">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+          <li class="links">
+            <a href="" target="_blank">
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
 
-    <footer class="hero-content">
-      <div id="socials">
-        <div>
-          <a href="restricted.html"><i class="fa-solid fa-envelope"></i></a>
-        </div>
-        <div>
-          <a href="https://github.com/suyogmgr" target="_blank"
-            ><i class="fa-brands fa-github"></i
-          ></a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/suyog-magar-901477265" target="_blank" ><i class="fa-brands fa-linkedin"></i></a>
-        </div>
-        <div>
-          <a href="https://www.facebook.com/suyog.magar.796/" target="_blank"
-            ><i class="fa-brands fa-facebook"></i
-          ></a>
-        </div>
+      <div id="footer-line">
+        <hr>
       </div>
-      <div>
-        <hr class="border" />
+     
+
+      <div class="footer-logo">
+        <img src="./images/logo.png" alt="footer-logo" />
       </div>
-      <div class="ending">
-        <h1>S</h1>
-        <p>Last Updated on August 25</p>
+      <div class="footer-txt">
+        <p>Last Updated on January 18</p>
       </div>
     </footer>
   </body>
