--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Suyog Rana Magar</title>
-    <link rel="icon" href="./images/logo.png">
+    <link rel="icon" href="./images/logo.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="global.css" />
     <link rel="stylesheet" href="small.css" />
@@ -88,6 +88,7 @@
     />
   </head>
   <body>
+    <!-- Navigation Bar -->
     <div id="nav-body-container">
       <!-- <div class="bgimg">
       <img src="./images/bg2.jpg" alt="bgimg" />
@@ -128,26 +129,46 @@
       </div>
     </div>
 
+    <!-- Form/Contact Section -->
+    <div class="contact-form">
+      <form action="#" class="c-form">
+        <h1>INCOMPLETE</h1>
+        <h2>HAVE A CHAT WITH ME</h2>
+        <label for="name">Name *</label>
+        <input type="text" id="name" placeholder="Your Name" required />
+        <label for="email">Email *</label>
+        <input type="email" id="email" placeholder="Your Email" required />
+        <label for="subject">subject</label>
+        <input type="text" id="subject" placeholder="Your subject" />
+        <label for="message">Message *</label>
+        <input type="text" id="message" placeholder="Your Message" required />
+        <div class="btn">
+          <button style="color: rgb(23, 24, 39);" class="ct-btn" >Submit</button>
+        </div>
+      </form>
+    </div>
+
+    <!-- Footer Section -->
     <footer>
       <div class="socials">
         <ul class="icons">
           <li class="links">
-            <a href="" target="_blank">
+            <a href="#" target="_blank">
               <i class="fa-solid fa-envelope"></i>
             </a>
           </li>
           <li class="links">
-            <a href="" target="_blank">
+            <a href="#" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
           <li class="links">
-            <a href="" target="_blank">
+            <a href="#" target="_blank">
               <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
           <li class="links">
-            <a href="" target="_blank">
+            <a href="#" target="_blank">
               <i class="fa-brands fa-facebook"></i>
             </a>
           </li>
@@ -155,9 +176,8 @@
       </div>
 
       <div id="footer-line">
-        <hr>
+        <hr />
       </div>
-     
 
       <div class="footer-logo">
         <img src="./images/logo.png" alt="footer-logo" />
