--- a/index.html
+++ b/index.html
@@ -130,23 +130,22 @@
     </div>
 
     <!-- Form/Contact Section -->
-    <div class="contact-form">
+    <!-- <div class="contact-form">
       <form action="#" class="c-form">
-        <h1>INCOMPLETE</h1>
         <h2>HAVE A CHAT WITH ME</h2>
-        <label for="name">Name *</label>
+        <label for="name">Name</label>
         <input type="text" id="name" placeholder="Your Name" required />
-        <label for="email">Email *</label>
+        <label for="email">Email</label>
         <input type="email" id="email" placeholder="Your Email" required />
         <label for="subject">subject</label>
-        <input type="text" id="subject" placeholder="Your subject" />
-        <label for="message">Message *</label>
+        <input type="text" id="subject" placeholder="Your subject" required />
+        <label for="message">Message</label>
         <input type="text" id="message" placeholder="Your Message" required />
         <div class="btn">
           <button style="color: rgb(23, 24, 39);" class="ct-btn" >Submit</button>
         </div>
       </form>
-    </div>
+    </div> -->
 
     <!-- Footer Section -->
     <footer>
@@ -158,7 +157,7 @@
             </a>
           </li>
           <li class="links">
-            <a href="#" target="_blank">
+            <a href="https://github.com/suyogmgr" target="_blank">
               <i class="fa-brands fa-github"></i>
             </a>
           </li>
@@ -168,22 +167,18 @@
             </a>
           </li>
           <li class="links">
-            <a href="#" target="_blank">
+            <a href="https://www.facebook.com/suyog.magar.796/" target="_blank">
               <i class="fa-brands fa-facebook"></i>
             </a>
           </li>
         </ul>
       </div>
 
-      <div id="footer-line">
-        <hr />
-      </div>
-
       <div class="footer-logo">
         <img src="./images/logo.png" alt="footer-logo" />
       </div>
       <div class="footer-txt">
-        <p>Last Updated on January 18</p>
+        <p>Last Updated on January 20</p>
       </div>
     </footer>
   </body>
