--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
               </a>
               <h2>Bank Management System</h2>
             </div>
+
             <div class="project-card">
               <a
                 href="https://github.com/suyogmgr/JCalculator/tree/main/Calculator"
@@ -155,6 +156,7 @@
               </a>
               <h2>Calculator</h2>
             </div>
+
             <div class="project-card">
               <a href="./Vclone/index.html" target="_blank">
                 <img src="./assets/viber.jpg" alt="project_3" />
@@ -165,48 +167,80 @@
         </div>
       </section>
 
-      <section id="skill" class="skill-section">
-        <div class="container">
-          <h1 class="skill-title">My Skills</h1>
-          <div class="skill-card">
-            <h1 class="subheading">
-              <i class="fa-brands fa-python"></i>
-              Python
-            </h1>
+      <div class="multi-section">
+        <section id="skill" class="skill-section">
+          <div class="container">
+            <h1 class="skill-title">My Skills</h1>
+            <div class="skill-card">
+              <div class="gradient-py">
+                <h1 class="subheading">
+                  <i class="fa-brands fa-python"></i>
+                  Python
+                </h1>
+              </div>
+            </div>
+            <div class="skill-card">
+              <div class="gradient-java">
+                <h1 class="subheading">
+                  <i class="fa-brands fa-java"></i>
+                  Java
+                </h1>
+              </div>
+            </div>
+            <div class="skill-card">
+              <div class="gradient-js">
+                <h1 class="subheading">
+                  <i class="fa-brands fa-js"></i>
+                  JS
+                </h1>
+              </div>
+            </div>
+            <div class="skill-card">
+              <div class="gradient-html">
+                <h1 class="subheading">
+                  <i class="fa-brands fa-html5"></i>
+                  HTML
+                </h1>
+              </div>
+            </div>
+            <div class="skill-card">
+              <div class="gradient-css">
+                <h1 class="subheading">
+                  <i class="fa-brands fa-css"></i>
+                  CSS
+                </h1>
+              </div>
+            </div>
           </div>
-          <div class="skill-card">
-            <h1 class="subheading">
-              <i class="fa-brands fa-java"></i>
-              Java
-            </h1>
+        </section>
+
+        <section id="contact" class="contact-section">
+          <div class="container">
+            <h1 class="contact-header">Contact Me</h1>
+            <div class="contact-pallet">
+              <div class="contact-box">
+                <i class="fa-solid fa-phone-arrow-up-right"></i>
+                <h2>CONTACT NO.</h2>
+                <hr />
+                <p>+977-9768389289</p>
+              </div>
+              <div class="contact-box">
+                <i class="fa-solid fa-envelope"></i>
+                <h2>EMAIL</h2>
+                <hr />
+                <p>mgrsuyog6@gmail.com</p>
+              </div>
+            </div>
           </div>
-          <div class="skill-card">
-            <h1 class="subheading">
-              <i class="fa-brands fa-js"></i>
-              JavaScript
-            </h1>
-          </div>
-          <div class="skill-card">
-            <h1 class="subheading">
-              <i class="fa-brands fa-html5"></i>
-              HTML
-            </h1>
-          </div>
-          <div class="skill-card">
-            <h1 class="subheading">
-              <i class="fa-brands fa-css"></i>
-              CSS
-            </h1>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
 
     <footer>
       <div class="container">
         <h1 class="footer-text">Suyog<span>.</span></h1>
         <h2 class="sub-text">Follow Me</h2>
-        <ul class="social-links">
+        <ul class="social-link">
           <il>
             <a href="https://github.com/suyogmgr" target="_blank">
               <i class="fa-brands fa-github"></i>
@@ -236,17 +270,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-        <!-- <div class="contact-section" id="contact">
-          <div class="container">
-            <h1 class="contact-header">Contace Me</h1>
-            <div class="contact-no">
-              <h2>CONTACT NO</h2>
-              <p>+977-9713688455</p>
-            </div>
-            <div class="email">
-              <h2>EMAIL</h2>
-              <p>mgrsuyog6@gmail.com</p>
-            </div>
-          </div>
-        </div> -->
