--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Bona+Nova:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
@@ -173,42 +179,68 @@
             <h1 class="skill-title">My Skills</h1>
             <div class="skill-card">
               <div class="gradient-py">
-                <h1 class="subheading">
-                  <i class="fa-brands fa-python"></i>
-                  Python
-                </h1>
+                <a
+                  style="text-decoration: none"
+                  href="https://pll.harvard.edu/course/cs50s-introduction-programming-python"
+                  target="_blank"
+                >
+                  <h1 class="subheading">
+                    <i class="fa-brands fa-python"></i>
+                    Python
+                  </h1>
+                </a>
               </div>
             </div>
             <div class="skill-card">
               <div class="gradient-java">
-                <h1 class="subheading">
-                  <i class="fa-brands fa-java"></i>
-                  Java
-                </h1>
+                <a
+                  style="text-decoration: none"
+                  href="https://youtu.be/BGTx91t8q50?si=c7IDiC4I31JHgAfq"
+                  target="_blank"
+                >
+                  <h1 class="subheading">
+                    <i class="fa-brands fa-java"></i>
+                    Java
+                  </h1>
+                </a>
               </div>
             </div>
             <div class="skill-card">
               <div class="gradient-js">
-                <h1 class="subheading">
-                  <i class="fa-brands fa-js"></i>
-                  JS
-                </h1>
+                <a
+                  style="text-decoration: none"
+                  href="https://www.youtube.com/watch?v=lfmg-EJ8gm4&list=PLOnTUu-6gco3o70vnJ9Y0UZyKC_EN7xkx&index=16"
+                  target="_blank"
+                >
+                  <h1 class="subheading">
+                    <i class="fa-brands fa-js"></i>
+                    JS
+                  </h1>
+                </a>
               </div>
             </div>
             <div class="skill-card">
               <div class="gradient-html">
-                <h1 class="subheading">
-                  <i class="fa-brands fa-html5"></i>
-                  HTML
-                </h1>
+                <a style="text-decoration: none" href="https://www.w3schools.com/html/" target="_blank">
+                  <h1 class="subheading">
+                    <i class="fa-brands fa-html5"></i>
+                    HTML
+                  </h1>
+                </a>
               </div>
             </div>
             <div class="skill-card">
               <div class="gradient-css">
-                <h1 class="subheading">
-                  <i class="fa-brands fa-css"></i>
-                  CSS
-                </h1>
+                <a
+                  style="text-decoration: none"
+                  href="https://www.w3schools.com/css/default.asp"
+                  target="_blank"
+                >
+                  <h1 class="subheading">
+                    <i class="fa-brands fa-css"></i>
+                    CSS
+                  </h1>
+                </a>
               </div>
             </div>
           </div>
