--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
             </div>
 
             <div class="project-card">
-              <a href="./Vclone/index.html" target="_blank">
-                <img src="./assets/viber.jpg" alt="project_3" />
+              <a href="./sun-portfolio/new/index.html" target="_blank">
+                <img src="./light-version/old-port.png" alt="project_3" />
               </a>
-              <h2>Viber Clone</h2>
+              <h2>New Portfolio</h2>
             </div>
           </div>
         </div>
