--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         
         <div class="nav-links">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Experience</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">H</a></li>
+            <li><a href="#">A</a></li>
+            <li><a href="#">P</a></li>
+            <li><a href="#">E</a></li>
+            <li><a href="#">C</a></li>
           </ul>
         </div>
         </nav>
